# riichi-efficiency-trainer-bot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
resources_src/: tileset_template.xcf
src/: efficiency_calculator.rs  game_logic.rs  image_render.rs  input_output.rs  main.rs  telegram_bot.rs  translations.rs  ukeire_calculator.rs  user_settings.rs  user_state.rs  user_state_updaters.rs
