[package]
name = "riichi-trainer"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.4", features = ["std", "std_rng"], default-features = false }
teloxide = { version = "0.12", features = ["macros", "auto-send", "ctrlc_handler", "teloxide-macros", "native-tls"], default-features = false }
log = { version = "0.4", default-features = false }
pretty_env_logger = { version = "0.4", default-features = false }
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"], default-features = false }
dashmap = { version = "5.4.0", features = ["serde"], default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0.93", default-features = false }
image = { version = "0.24.5", features = ["png"], default-features = false }
